<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="janeelsmur.taxi.OrderingInformationActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:theme="@style/AppTheme.AppBarOverlay"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar_ordering_information"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/toolbar_ordering_information"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/final_order_header_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:id="@+id/textView"
                    android:gravity="center"/>

            <TextView
                    android:text="@string/from_with_dotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" android:id="@+id/textView3"/>
            <FrameLayout
                    android:layout_width="match_parent"
                    android:id="@+id/location_from_container"
                    android:layout_height="match_parent">
            </FrameLayout>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:srcCompat="@color/colorAccent"
                    android:id="@+id/imageView11"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/where_with_dotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" android:textAlignment="center"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/where_locations_container">
            </FrameLayout>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:srcCompat="@color/colorAccent"
                    android:id="@+id/imageView4"/>

            <TextView
                    android:text="@string/tariff_with_dots"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView8"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tariff_container">
            </FrameLayout>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:srcCompat="@color/colorAccent"
                    android:id="@+id/imageView8"/>

            <TextView
                    android:text="@string/wishes_with_dots"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView9"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/wishes_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </LinearLayout>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:srcCompat="@color/colorAccent"
                    android:id="@+id/imageView12"/>
            <TextView
                    android:text="@string/date_of_arrival_with_dots"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" android:id="@+id/textView10"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:id="@+id/date_of_arrival_container"
                    android:layout_height="match_parent">
            </FrameLayout>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:srcCompat="@color/colorAccent"
                    android:id="@+id/imageView14"/>
            <Button
                    android:text="@string/ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/finalOrderButton"
                    style="@style/Widget.AppCompat.Button.Colored"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
